--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "students-app",
   "version": "0.1.0",
+  "homepage": "https://koolitrek.info",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -14,17 +15,22 @@
     "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.9.0",
-    "react-router-dom": "^6.9.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "serve": "node server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
